fixed screen flickering issue when scrolling

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -389,7 +389,7 @@ input[type="text"].searchInput::-webkit-input-placeholder {
 }
 @media (max-width: 639.98px) {
   #navigation {
-    position: relative;
+    position: sticky;
     height: 88px;
     width: 100%;
     top: 0;
